test/samples/valid/types.maruir
struct Foo {
    a: u256;
    b: i8;
    c: bool;
}

struct Boo {
    a: bool;
}

struct Goo<M1, M2>  {
    a: bool[] * M1;
    b: u8[] * M2[] * M1;
    c: (((i16[] * M2)[]) * M1)[] * M2;
}

struct Doo {
    a: Foo * #Memory;
    b: Boo * #Storage;
    c: Goo<#Storage, #Memory> *#Memory;
}
