test/samples/invalid/resolving/struct_targs_mismatch.maruir
struct Foo<M;T, T1> {
	field: T[] *M;
}

fun foo(arg: Foo<#memory; uint8>) {
}
